# github-actions-test-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py
cmakes/: win_vs.cmake
cpp/: .gitignore  main.cpp
pygatt/: __init__.py  nativemethods.py
pygatt.egg-info/: PKG-INFO  SOURCES.txt
